--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -374,7 +374,7 @@
                 </div>
                 <div class="col-md-4" id="DivGenerarFactura">
                     <div class="form-group">
-                        <label for="Marca_Biometrico"></label>
+                        <label for="bo_EsBodega"></label>
                         @Html.DevExpress().CheckBoxFor(q => q.GenerarFactura, settings =>
                             {
                                 settings.Name = "GenerarFactura";
