--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_018.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_018.cshtml
@@ -118,8 +118,8 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdNivel">Tipo nota</label>
-                            @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_nota, "IdTipoNota", "No_Descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "form", @role = "text-danger" })
+                            @*@Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_nota, "IdTipoNota", "No_Descripcion"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "form", @role = "text-danger" })*@
                         </div>
                     </div>
 
