--- a/ERP/Core.Erp.Web/Areas/General/Views/Bodega/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Bodega/Anular.cshtml
@@ -25,25 +25,13 @@
 
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="cod_punto_emision">Punto de emisión</label>
-                    @Html.TextBoxFor(q => q.cod_punto_emision, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.cod_punto_emision, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label for="bo_manejaFacturacion_bool">@Html.CheckBoxFor(q => q.bo_manejaFacturacion_bool) Maneja facturación</label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label for="bo_EsBodega_bool">@Html.CheckBoxFor(q => q.bo_EsBodega_bool) Es bodega de inventario</label>
-                    </div>
+                    <label for="bo_EsBodega"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.bo_EsBodega, settings =>
+                            {
+                                settings.Name = "bo_EsBodega";
+                                settings.Text = "Es bodega";
+                            }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.bo_EsBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -113,34 +101,6 @@
                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                }).BindList(ViewBag.lst_cuentas).GetHtml()
                     @Html.ValidationMessageFor(q => q.IdCtaCtble_Inve, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdCtaCtble_Costo">Cta. Cble Costo</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCtble_Costo, settings =>
-                    {
-                        settings.Name = "IdCtaCtble_Costo";
-                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                        settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                        settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                        settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                        settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                        //Campo ID
-                        settings.Properties.ValueField = "IdCtaCble";
-                        settings.Properties.ValueType = typeof(string);
-                        settings.Properties.TextField = "pc_Cuenta";
-                        //Boton para seleccionar ningun registro
-                        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                        settings.Properties.NullText = "== Seleccione ==";
-                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                    }).BindList(ViewBag.lst_cuentas).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdCtaCtble_Costo, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
