--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionMovimientoInventario/_GridViewPartial_movimiento_inventario_x_aprobar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionMovimientoInventario/_GridViewPartial_movimiento_inventario_x_aprobar.cshtml
@@ -37,7 +37,7 @@
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
         };
-        
+
         settings.Columns.Add("CodMoviInven", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(8);
         settings.Columns.Add("nom_bodega", "Bodega").Width = System.Web.UI.WebControls.Unit.Percentage(15);
         settings.Columns.Add("IdNumMovi", "# Movimiento").Width = System.Web.UI.WebControls.Unit.Percentage(5);
@@ -55,7 +55,15 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("INV_002", "InventarioReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdMovi_inven_tipo = DataBinder.Eval(c.DataItem, "IdMovi_inven_tipo"), IdNumMovi = DataBinder.Eval(c.DataItem, "IdNumMovi"), Aprobar = "S" }, Request.Url.Scheme) + "');\"></span>");
+                if (Convert.ToString(DataBinder.Eval(c.DataItem, "signo")) == "+")
+                {
+                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("INV_001", "InventarioReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdMovi_inven_tipo = DataBinder.Eval(c.DataItem, "IdMovi_inven_tipo"), IdNumMovi = DataBinder.Eval(c.DataItem, "IdNumMovi"), Aprobar = "S" }, Request.Url.Scheme) + "');\"></span>");
+                }
+                else
+                {
+                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("INV_002", "InventarioReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdMovi_inven_tipo = DataBinder.Eval(c.DataItem, "IdMovi_inven_tipo"), IdNumMovi = DataBinder.Eval(c.DataItem, "IdNumMovi"), Aprobar = "S" }, Request.Url.Scheme) + "');\"></span>");
+                }
+
             });
             column.Width = Unit.Percentage(5);
         });
