--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas_x_cruzar.cshtml
@@ -4,7 +4,7 @@
         settings.Name = "GridView_conciliacion_facturas_x_cruzar";
         settings.CallbackRouteValues = new { Controller = "ConciliacionCaja", Action = "GridViewPartial_conciliacion_facturas_x_cruzar" };
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdCbteCble_Ogiro";
+        settings.KeyFieldName = "IdSecuencia";
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
