--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_001.cshtml
@@ -9,6 +9,22 @@
 }
 @using (Html.BeginForm())
 {
+    if (@ViewBag.Aprobar == "S")
+    {
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-1">
+                    <input type="hidden" id="SecuencialID" name="SecuencialID" value="@ViewBag.SecuencialID" />
+                    <div class="form-group">
+                        <button type="button" class="btn btn-primary form-control" id="btn_aprobar" onclick="AprobarMovimiento();" title="Aprobar">
+                            Aprobar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
     Html.DevExpress().WebDocumentViewer(settings =>
     {
         settings.MobileMode = false;
@@ -16,3 +32,57 @@
         settings.Name = "webDocumentViewer";
     }).Bind(Model).GetHtml();
 }
+
+<script type="text/javascript">
+    function AprobarMovimiento() {
+        var datos = {
+            SecuencialID: $("#SecuencialID").val()
+            }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("AprobarMovimiento", "AprobacionMovimientoInventario", new { Area = "Inventario"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.length > 0) {
+                    alert(data);
+                    location.reload();
+                } else {
+                    alert("No se ha podido aprobar el movimiento de inventario");
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
+</script><script type="text/javascript">
+    function AprobarMovimiento() {
+        var datos = {
+            SecuencialID: $("#SecuencialID").val()
+            }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("AprobarMovimiento", "AprobacionMovimientoInventario", new { Area = "Inventario"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.length > 0) {
+                    alert(data);
+                    location.reload();
+                } else {
+                    alert("No se ha podido aprobar el movimiento de inventario");
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
+</script>
