--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
@@ -101,7 +101,7 @@
                     @Html.ValidationMessageFor(q => q.cr_EsElectronico, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-4 col-md-2">
+            <div class="col-md-offset-3 col-md-2">
                 <div class="form-group">
                     <label for="cr_fecha">Fecha*</label>
                     @Html.DevExpress().DateEditFor(q=> q.cr_fecha, settings =>
@@ -122,6 +122,14 @@
                     <button type="button" class="btn btn-primary form-control" id="btn_imprimir" title="Imprimir" onclick="Imprimir();">
                         <i class="fa fa-print"></i>
                     </button>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("CobrosSinRetencion","CobranzaRetenciones",new { Area = "CuentasPorCobrar" })">
+                        <i class="fa fa-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
